Cambiando code de err

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <body class="">
     <header class=""> 
       <h1 class="p-3 text-white text-center" id="title" >It's Food</h1>
-        <nav id="menu" class="hidden navbar navbar-expand-md navbar-dark">
+        <nav id="menu" class="hidden fixed-top navbar navbar-expand-md navbar-dark">
              <!-- <a class="navbar-brand" href="#">Navbar</a> -->
           <span class="itsFood navbar-brand">It's Food</span>
           <!-- <div id="menu"> -->
